Bug 157436 - [JSC][32bit] stress/tagged-templates-template-object.js fails in debug
Summary: [JSC][32bit] stress/tagged-templates-template-object.js fails in debug
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Benjamin Poulain
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-06 17:10 PDT by Benjamin Poulain
Modified: 2016-05-07 01:19 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.05 KB, patch)
2016-05-06 17:13 PDT, Benjamin Poulain
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Poulain 2016-05-06 17:10:56 PDT
[JSC][32bit] stress/tagged-templates-template-object.js fails in debug
Comment 1 Benjamin Poulain 2016-05-06 17:13:13 PDT
Created attachment 278294 [details]
Patch
Comment 2 Filip Pizlo 2016-05-06 23:24:43 PDT
Comment on attachment 278294 [details]
Patch

Oops!
Comment 3 WebKit Commit Bot 2016-05-07 01:19:06 PDT
Comment on attachment 278294 [details]
Patch

Clearing flags on attachment: 278294

Committed r200541: <http://trac.webkit.org/changeset/200541>
Comment 4 WebKit Commit Bot 2016-05-07 01:19:10 PDT
All reviewed patches have been landed.  Closing bug.