[JSC][32bit] stress/tagged-templates-template-object.js fails in debug https://bugs.webkit.org/show_bug.cgi?id=157436

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-05-07
Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
The node OverridesHasInstance had a speculation after a jump.

Canonical link: https://commits.webkit.org/175572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200541 268f45cc-cd09-0410-ab3c-d52691b4dbfc